# Trading_Indicators

./: .gitignore  ARCHITECTURE.md  Analyzer.h  CMakeLists.txt  Candle.cpp  CsvLoader.cpp  Exceptions.cpp  SpikeDetector.cpp  SpikeDetector.h  Statistics.cpp  TimeSeries.cpp  TimeSeries.h  main.cpp
app/: CMakeLists.txt  main.cpp  main_cli.cpp
data/data_1year/: HistoricalData_AAPL.csv  HistoricalData_AMZN.csv  HistoricalData_MSFT.csv  HistoricalData_QCOM.csv  HistoricalData_TSLA.csv
data/data_5years/: HistoricalData_AAPL.csv  HistoricalData_AMZN.csv  HistoricalData_MSFT.csv  HistoricalData_QCOM.csv  HistoricalData_TSLA.csv
include/analysis/: SpikeDetector.hpp  Statistics.h
include/app/: AnalysisController.hpp  CandleChartView.hpp  ChartRenderer.hpp  MainWindow.hpp  Renderer.hpp
include/core/: Candle.h  CsvLoader.h  CsvLoader.hpp  Exceptions.h  Exceptions.hpp  TimeSeries.h  TimeSeries.hpp
include/indicators/: DoubleMA.hpp  Indicator.hpp  MovingAverage.hpp  RSI.hpp
src/: CMakeLists.txt
src/analysis/: CMakeLists.txt  SpikeDetector.cpp  Statistics.cpp
src/app/: AnalysisController.cpp  CandleChartView.cpp  ChartRenderer.cpp  MainWindow.cpp
src/core/: Candle.cpp  CsvLoader.cpp  Exceptions.cpp  TimeSeries.cpp
src/indicators/: DoubleMA.cpp  MovingAverage.cpp  RSI.cpp
tests/: CMakeLists.txt  analysis_tests.cpp  core_tests.cpp  indicators_tests.cpp
